--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>afra@ibnat</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h2 class="logo">afra@ibnat</h2>
+    <nav>
+      <div class="menu">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Services</a>
+            <li>Health Education</li>
+            <li>Medicines</li>
+            <li>Covid 19</li>
+          </li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+
+      </div>
+    </nav>
+  </header>
   
 </body>
 </html>
